--- a/package.yml
+++ b/package.yml
@@ -3,3 +3,4 @@ author:  MrIsaacs
 current: v0.5
 category: Effects 
 tags:  [background, resize, aspec ratio]
+demo: http://gnius.at/gniusBackground/
