--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 name: gniusBackground
 author:  MrIsaacs
-current: v0.5
+current: 0.5.2
 category: Effects 
 tags:  [background, resize, aspec ratio]
 demo: http://gnius.at/gniusBackground/
