--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 name: gniusBackground
-author:  MrIsaacs
+author:  Ivan Ilić
 current: 0.5.2
 category: Effects 
 tags:  [background, resize, aspec ratio]
