--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,8 @@
-name: gniusBackground
-author:  MrIsaacs
-current: 0.5.5
-category: Effects 
-tags:  [background, resize, aspec ratio]
-demo: http://gnius.at/gniusBackground/
+name: Form.Upload
+author: astolwijk
+current: 0.1
+category: utilities
+tags: [upload, html5, file, "drag and drop"]
+license: MIT
+description: HTML5 Upload for multiple files
+demo: http://aryweb.nl/projects/mootools-form-upload/Demos/Upload.html
