forge update test

--- a/package.yml
+++ b/package.yml
@@ -1,5 +1,5 @@
 name: Form.Upload
-author: astolwijk
+author: MrIsaacs
 current: 0.1
 category: utilities
 tags: [upload, html5, file, "drag and drop"]
