--- a/package.yml
+++ b/package.yml
@@ -1,7 +1,7 @@
 name: gniusBackground
 author: MrIsaacs
 current: 0.5.7
-category: utilities
+category: Effects
 tags: [upload, html5, file, "drag and drop"]
 license: MIT
 description: HTML5 Upload for multiple files
